[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy_space_ship/Sprite-1_Idle.png" type="Texture" id=1]
[ext_resource path="res://enemy_space_ship/enemy_space_ship_rigid_body.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 0 )

[node name="enemy_space_ship_rigid_body" type="RigidBody2D"]
rotation = 1.5708
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="enemy_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 0, -100 )

[node name="RayCast2D2" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="RayCast2D3" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="RayCast2D4" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( -100, 0 )

[node name="shoot_cooldown" type="Timer" parent="."]

[node name="enemy_health_bar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = 16.0
margin_right = 12.0
margin_bottom = 30.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="."]

[node name="enemy_space_ship_area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemy_space_ship_area"]
polygon = PoolVector2Array( -8, -8, -8, 0, -3, 6, 3, 6, 8, 0, 8, -7, 8, -8 )

[connection signal="area_entered" from="enemy_space_ship_area" to="." method="_on_enemy_space_ship_area_area_entered"]
